--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <p class="line" style="color: red;">━</p>
                 <p>Browse Listing - Direct Contact - Book With Confidence</p>
                 <div class="header_buttons">
-                    <a href="./assests/Find Hotels.html?from=first" target="_blank"><button class="find-hotels-btn">Find
+                    <a href="./assests/Find Hotels.html?from=first"><button class="find-hotels-btn">Find
                             Hotels</button></a>
-                    <a href="./assests/updateDetails.html?from=first" target="_blank"><button class="register-hotels-btn">Register Hotels</button></a>
+                    <a href="./assests/updateDetails.html?from=first"><button class="register-hotels-btn">Register Hotels</button></a>
                 </div>
             </div>
         </div>
